"Nächste Schritte" and some minor text and style changes.

--- a/views/introduction.pug
+++ b/views/introduction.pug
@@ -112,13 +112,26 @@ block content
                   li 
                     strong Ziel 3: 
                     | Daraus abgeleitet und gemessen kann auch erkannt werden, welcher Pathfinder in gewissen Situationen der schnellste bzw. langsamste ist.
+        br
+        .card
+          .card-body
+            h2#6 Nächste Schritte
+            h3
+              |  Demonstration der Pathfinder 
+              a(href="#6") #
+            .row
+              .col-sm
+                p Im 
+                  a(href="/pathfinder") nächsten Schritt
+                  |  visualisiert die Webapplikation die einzelnen Pathfinder und beschreibt ihre Grundgedanken und Funktionsweisen (Navigationspunkt 2).
+                p Danach vergleicht die Webapplikation die Pathfinder interaktiv (Navigationspunkt 3).
         hr
         .card
           .card-body
-            h2#6 Ziele im Detail (optional)
+            h2#7 Ziele im Detail (optional)
             h3
               |  Ausführliche Erörterung der Ziele 
-              a(href="#6") #
+              a(href="#7") #
             .row
               .col-sm
                 p Dieses optionale Panel dient dazu die Ziele genauer in der technischen Umsetzung zu erklären. Die Methodik zum Erreichen der 
