--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,15 +15,20 @@ html
       ul.navbar-nav
         li.nav-item: a.navbar-brand.nav-link(href="/" title="Berufsmaturitätsarbeit") BMA
         li.nav-item: a.nav-link(href="/intro" title="Ein einfach verständlicher Text führt einen in das Thema der Pathfinding Algorithmen ein.")
-          | 1. Einführung in das Thema
+          strong 1. 
+          | Einführung in das Thema
         li.nav-item: a.nav-link(href="/pathfinder" title="Die Visuelle Darstellung gewährt besseres Verständnis des Themas.")
-          | 2. Visualisierung der Pathfinder
+          strong 2. 
+          | Visualisierung der Pathfinder
         li.nav-item: a.nav-link(href="/comparison" title="Der Vergleich zeigt die Eigenschaften verschiedener Pathfinder nebeneinander.")
-          | 3. Vergleich der Pathfinder
+          strong 3. 
+          | Vergleich der Pathfinder
         li.nav-item: a.nav-link(href="/glossary")
-          | 4. Glossar
+          strong 4. 
+          | Glossar
         li.nav-item: a.nav-link(href="/credits")
-          | 5. Autoren
+          strong 5. 
+          | Autoren
 
     .page-core: block content
 
