--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,10 @@ body {
       margin-right: 15px; }
     body .page-core .grid-slider {
       text-align: center; }
+  body nav {
+    margin: 0 0 30px 0; }
+  body footer {
+    margin: 40px 0 0 0; }
 
 a {
   color: #00B7FF; }
