--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -7,6 +7,10 @@ body
       margin-right: 15px;
     .grid-slider
       text-align: center;
+  nav
+    margin: 0 0 30px 0;
+  footer
+    margin: 40px 0 0 0;
 
 a
   color: #00B7FF
