Change used pathfinders to A*, BestFirst and BreadthFirst.

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -11,6 +11,7 @@ body
     margin: 0 0 30px 0;
   footer
     margin: 40px 0 0 0;
-
+  .grid-generated
+    border: 1px solid black;
 a
   color: #00B7FF
