--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,8 @@ body {
     margin: 0 0 30px 0; }
   body footer {
     margin: 40px 0 0 0; }
+  body .grid-generated {
+    border: 1px solid black; }
 
 a {
   color: #00B7FF; }
