Implement basic performance (operations count) analytics.

--- a/views/pathfinder-block.pug
+++ b/views/pathfinder-block.pug
@@ -29,6 +29,9 @@ h2 Raster
   .col-4: p Heuristisch analysiert:
   .col-8: p#stat-heuristics: i Berechne...
 .row
+  .col-4: p Operationen:
+  .col-8: p#stat-operations: i Berechne...
+.row
   .col-4: p Vergangene Zeit:
   .col-8: p#stat-elapsed-time: i Berechne...
 
