Add operations counter and display on comparison page.

--- a/views/comparison-block.pug
+++ b/views/comparison-block.pug
@@ -38,8 +38,12 @@ h2 Raster
     .col-4: p(title="") Raster/Labyrint Art:
     .col-8: p#stat-grid-type: i Wird berechnet...
   .row
-    .col-4: p(title="") Total zurückgelegter Weg pro Pathfinder:
+    .col-4: p(title="") Anzahl Operationen:
+    .col-8: pre#stat-total-operations: i Wird berechnet...
+  .row
+    .col-4: p(title="") Zurückgelegter Weg:
     .col-8: pre#stat-total-distance: i Wird berechnet...
+            
   
   // Horizontal line
   .row: .col-sm: hr
