Change text contents.

--- a/views/descriptions/bestfirst.pug
+++ b/views/descriptions/bestfirst.pug
@@ -1,4 +1,4 @@
-p TODO: Dijkstra Pathfinder Beschreibung:
+p TODO: BestFirstFinder Beschreibung:
 ol
   li Geschichte
   li Funktionsweise einfach beschrieben
