--- a/views/glossary.pug
+++ b/views/glossary.pug
@@ -15,8 +15,8 @@ block content
           tbody
             tr
               td A*
-              td Sprich "A Star". Ein Pathfinding Algorithmus (siehe Fachbegriff Algorithmus). Dieser nutzt zusätzlich heuristische Mittel, um den Weg zu berechnen (siehe Heuristik).
-              td 
+              td Sprich &laquo;A Star&raquo;. Ein Pathfinding Algorithmus (siehe Fachbegriff Algorithmus). Dieser nutzt zusätzlich heuristische Mittel, um den Weg zu berechnen (siehe Heuristik).
+              td -
             tr
               td Algorithmus
               td Ein Ablauf, Prozess oder Programm, der eine Liste mit Anweisungen schrittweise befolgt, um Daten umzuwandeln.
@@ -30,13 +30,17 @@ block content
               td Hilfsalgorithmus, unter Anderem für Pathfinder, der zusätzlich hilft zwischen einzelnen Schritten die Kosten für eine mögliche Operation einzuschätzen.
               td Chebyshev, Euklidisch, Manhattan, Oktil.
             tr
+              td Operationen
+              td Eine &laquo;Operation&raquo; beschreibt in unserem Fall einen Zyklus eines Pathfinders. Je mehr Zyklen ein Pathfinder in Relation zu einem anderen benötigt, desto weniger effizient ist er.
+              td -
+            tr
               td Parameter
               td Die Randbedingungen für einen Durchlauf bzw. ein Experiment.
               td Der Start- und Endpunkt und ein spezifisches Labyrinth, die man dem A*-Pathfinder übergibt, wären Parameter.
             tr
               td Pathfinder
               td Eine Art Algorithmus, der in einem gegebenen Raum mit eingezeichnetem Start- und Endpunkt den schnellsten weg Findet.
-              td A*, Dijkstra.
+              td A*, Dijkstra, BestFirstFinder und BreadthFirstFinder.
             tr
               td PathFinding.js
               td Die Zentrale Programmbibliothek, deren Pathfinder Implementationen wir in unserer Webapplikation nutzen.
