--- a/views/introduction.pug
+++ b/views/introduction.pug
@@ -58,7 +58,8 @@ block content
                   |  Es gibt viele verschiedene Pathfinder. In unserer Arbeit konzentrieren wir uns aber nur auf die folgenden:
                 ul
                   li A* (sprich "a star")
-                  li Dijkstra
+                  li BestFirstFinder
+                  li BreadthFirstFinder
         br
         .card
           .card-body
@@ -72,7 +73,7 @@ block content
                   i.fa.fa-info-circle(aria-hidden="true")
                   |  Ein Algorithmus ist einfach gesagt ein Programm, welches Daten in einer nützlichen Weise in Schritten verwandelt. Pathfinder sind auch eine Art von Algorithmus. Man gibt den Pathfindern als Parameter den Raum und den Start- und Endpunkt. Dieser liefert einem als Resultat einen passenden Weg.
               .col-4
-                em Dijkstra(Raum, Startpunkt, Endpunkt) 
+                em A*(Raum, Startpunkt, Endpunkt) 
                   i.fa.fa-long-arrow-right(aria-hidden="true")
                   |  Weg
 
