Small textual change.

--- a/views/glossary.pug
+++ b/views/glossary.pug
@@ -51,5 +51,5 @@ block content
               td Man kann sich in unserem Fall eine Matrix als eine Art Koordinatensystem mit eingezeichneten Blöcken vorstellen, in dem Wege gefunden werden.
             tr
               td recbacktracker
-              td "Recursive Backtracker". Ein Labyrinthalgorithmus, den wir in unserer Webapplikation zur Generierung von perfekten (immer lösbaren) Labyrinthen verwenden.
+              td &laquo;Recursive Backtracker&raquo;, ein Labyrinthalgorithmus, den wir in unserer Webapplikation zur Generierung von perfekten (immer lösbaren) Labyrinthen verwenden.
               td: a(href="https://en.wikipedia.org/wiki/Maze_generation_algorithm#Recursive_backtracker" target="_blank") Wikipedia Kurzfassung
