--- a/views/descriptions/astar.pug
+++ b/views/descriptions/astar.pug
@@ -1,6 +1,2 @@
-p TODO: A* Pathfinder Beschreibung:
-ol
-  li Geschichte
-  li Funktionsweise einfach beschrieben
-  li Beispielablauf illustrieren
-
+h2 A*-Pathfinder Beschreibung
+p ...
