--- a/views/comparison.pug
+++ b/views/comparison.pug
@@ -5,11 +5,19 @@ block content
     .row
       .col-sm
         h1= title
-        p Pathfinding Algorithmen werden hier verglichen (Side-by-side).
-        // Placeholder text start 
-        p Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non-numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?  
-        p At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non-provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non-recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat
-        // Placeholder text end 
+        p Pathfinding-Algorithmen werden hier verglichen (Side-by-side).
+        p In der 
+          a(href="/introduction") Einführung
+          |  haben wir bereits die drei ausgewählten Pathfinder (A*, BestFirst und BreadthFirst) genannt.
+          | Diese Pathfinder werden auf dieser Seite parallel und mehrmals hintereinander verglichen.
+          | Als Resultat ersichtlich sind dann folgende Eigenschaften:
+        ul
+          li Anzah Operationen
+          li Zurückgelegter Weg
+          li Rechenzeit
+        p Visuell ersichtlich sind die Durchläufe. Die Wege der jeweiligen Pathfinder sind verschieden gefärbt.  
+          | Vom Nutzer anpassbar sind als Parameter die Anzahl Durchläufe, Rasterart und Rastergrösse.
+
       .col-sm
         include comparison-block
   include comparison-script
