--- a/views/descriptions/bestfirst.pug
+++ b/views/descriptions/bestfirst.pug
@@ -1,6 +1,2 @@
-p TODO: BestFirstFinder Beschreibung:
-ol
-  li Geschichte
-  li Funktionsweise einfach beschrieben
-  li Beispielablauf illustrieren
-
+h2 BestFirstFinder Beschreibung
+p ...
