--- a/views/descriptions/breadthfirst.pug
+++ b/views/descriptions/breadthfirst.pug
@@ -1,6 +1,2 @@
-p TODO: BreadthFirstFinder Beschreibung:
-ol
-  li Geschichte
-  li Funktionsweise einfach beschrieben
-  li Beispielablauf illustrieren
-
+h2 BreadthFirstFinder Beschreibung
+p ...
