--- a/views/pathfinder.pug
+++ b/views/pathfinder.pug
@@ -5,19 +5,20 @@ block content
     .row
       .col-sm
         h1= title
-        p Auf der rechten Seite sieht man einzelne Pathfinder &laquo;in action&raquo;. Der grüne Block repräsentiert jeweils den Endpunkt und der blaue den Startpunkt.
-        if query.algorithm == 'AStarFinder' || !query.algorithm
-          include descriptions/astar
-        if query.algorithm == 'BestFirstFinder' 
-          include descriptions/bestfirst
-        if query.algorithm == 'BreadthFirstFinder' 
-          include descriptions/breadthfirst
+        p Auf der rechten Seite sieht man die in der 
+          a(href="/introduction#3") Einführung 
+          |  erwähnten Pathfinder &laquo;in action&raquo;. Der grüne Block repräsentiert jeweils den Endpunkt und der blaue den Startpunkt.
+          | Der ausgewählte Pathfinder findet zwischen diesen zwei Pünkten dann den passenden Weg.
+        p Diese Seite soll zur kurzen visuellen Einführung in die Pathfinder dienen. 
+          | Parameter lassen sich vom Nutzer unter &laquo;Steuerung&raquo; anpassen.
+        include descriptions/astar
+        include descriptions/bestfirst
+        include descriptions/breadthfirst
 
-        // Placeholder text start 
-        p Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non-numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?  
-        p At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non-provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non-recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat
-        // Placeholder text end 
-
+        h2 Nächster Schritt
+        p Im 
+          a(href="/comparison") nächsten Schritt
+          |  wird's interessant. Wir vergleichen die Pathfinder nebeneinander auf ihre Eigenschaften.
       .col-sm
         include pathfinder-block
   include pathfinder-script
