--- a/views/comparison-block.pug
+++ b/views/comparison-block.pug
@@ -10,10 +10,8 @@ h2 Raster
 #grid-slider-control.d-none
   .row
     .col-sm.grid-slider
-      // TODO -(total/10) elems button (double arrow left)
       button.btn.btn-info#grid-left(title="Vorheriges Vergleichsresultat anzeigen"): i.fa.fa-arrow-left
       button.btn.btn-info#grid-right: i.fa.fa-arrow-right
-      // TODO +(total/10) elems button (double arrow right)
   .row
     .col-sm.grid-slider
       span#grid-status-current
@@ -38,11 +36,18 @@ h2 Raster
     .col-4: p(title="") Raster/Labyrint Art:
     .col-8: p#stat-grid-type: i Wird berechnet...
   .row
+    .col-sm
+      h4 Benchmark
+      p Für die Auswertung relevante Daten.
+  .row
     .col-4: p(title="") Anzahl Operationen:
     .col-8: pre#stat-total-operations: i Wird berechnet...
   .row
     .col-4: p(title="") Zurückgelegter Weg:
     .col-8: pre#stat-total-distance: i Wird berechnet...
+  .row
+    .col-4: p(title="") Vergangene Rechenzeit:
+    .col-8: pre#stat-elapsed-times: i Wird berechnet...
             
   
   // Horizontal line
