--- a/views/comparison.pug
+++ b/views/comparison.pug
@@ -19,5 +19,9 @@ block content
           | Vom Nutzer anpassbar sind als Parameter die Anzahl Durchläufe, Rasterart und Rastergrösse.
 
       .col-sm
+        include comparison-raster
+
+    .row
+      .col-sm
         include comparison-block
   include comparison-script
