--- a/views/pathfinder-block.pug
+++ b/views/pathfinder-block.pug
@@ -26,7 +26,7 @@ h2 Raster
 // Status
 .row
   .col-sm
-    h3 Status
+    h3 Messungen
 .row
   .col-4: p Algorithmus:
   .col-8: u#stat-algorithm: i Nicht definiert
