--- a/views/glossary.pug
+++ b/views/glossary.pug
@@ -22,6 +22,14 @@ block content
               td Ein Ablauf, Prozess oder Programm, der eine Liste mit Anweisungen schrittweise befolgt, um Daten umzuwandeln.
               td Pathfinder, Sortierverfahren (Produktpreis auf- und absteigend), Ihre Morgenroutine.
             tr
+              td BestFirstFinder
+              td Ein Pathfinding-Algorithmus. Nicht zu verwechseln mit dem BreadthFirstFinder.
+              td -
+            tr
+              td BreadthFirstFinder
+              td Ein weiterer Pathfinding-Algorithmus. Nicht zu verwechseln mit dem BestFirstFinder.
+              td -
+            tr
               td Dijkstra
               td Ein Pathfinding Algorithmus (siehe Fachbegriff Algorithmus). Dieser nutzt keine heuristische Mittel.
               td -
