--- a/views/comparison-raster.pug
+++ b/views/comparison-raster.pug
@@ -2,15 +2,27 @@ h2 Raster
 .row
   .col-sm
     // Result visualization
-    #container: p Sobald Sie die Vergleichsparameter bestimmt haben, erscheint hier das Resultat.
+    if(query.submit)
+      #container
+    else
+      #container: p Sobald Sie die Vergleichsparameter bestimmt haben, erscheint hier das Resultat.
 .row: .col-sm: br
-#grid-slider-control.d-none
-  .row
-    .col-sm.grid-slider
-      button.btn.btn-info#grid-left(title="Vorheriges Vergleichsresultat anzeigen"): i.fa.fa-arrow-left
-      button.btn.btn-info#grid-right: i.fa.fa-arrow-right
-  .row
-    .col-sm.grid-slider
-      span#grid-status-current
-      span#grid-status-divider.hidden /
-      span#grid-status-total
+.row
+  .col-9
+    if(query.submit)
+      p Messung für diesen Einzelversuch:
+    else
+      p ...
+    #grid-results
+  .col-3
+    if(query.runs > 1)
+      #grid-slider-control.d-none
+        .row
+          .col-sm.grid-slider
+            button.btn.btn-info#grid-left(title="Vorheriges Vergleichsresultat anzeigen"): i.fa.fa-arrow-left
+            button.btn.btn-info#grid-right: i.fa.fa-arrow-right
+        .row
+          .col-sm.grid-slider
+            span#grid-status-current
+            span#grid-status-divider.hidden /
+            span#grid-status-total
