Edit credits page.

--- a/views/credits.pug
+++ b/views/credits.pug
@@ -5,14 +5,22 @@ block content
     .row
       .col-sm
         h1= title
+        p
+          a(href="https://github.com/fuerbringer" target="_blank") Severin Fürbringer
+          |  (severin
+          i.fa.fa-at
+          | fsfe.org)
+          span : Entwicklung und BMA-Dokument 
+          br
+          a(href="https://github.com/0x0Tbex" target="_blank") Adrian Stoop
+          |  (adrian-stoop
+          i.fa.fa-at
+          | gmx.ch)
+          span : Datenauswertung und BMA-Dokument 
         p Diese Arbeit ist frei unter der AGPL 3 Lizenz verfügbar: 
-          a(href="https://github.com/fuerbringer/bma" target="_blank") GitHub Repository
-        p Die Quelltextdokumentation ist hier zugänglich: 
+          a(href="https://github.com/fuerbringer/bma" target="_blank") Quelltext
+          | . Die Quelltextdokumentation ist hier zugänglich: 
           a(href="/docs" target="_blank") /docs
-        h2 Entwicklung
-        ul
-          li: a(href="https://github.com/fuerbringer" target="_blank") Severin Fürbringer
-          li: a(href="https://github.com/0x0Tbex" target="_blank") Adrian Stoop
         h2 Programmbibliotheken
         h3 PathFinding.js
         p Diese Arbeit wurde durch 
