Definitely add pf description texts pugfiles.

--- a/views/descriptions/astar.pug
+++ b/views/descriptions/astar.pug
@@ -1,2 +1,2 @@
 h2 A*-Pathfinder Beschreibung
-p ...
+p Der A*-Algorithmus, gesprochen "A-Star", untersucht mithilfe einer Heuristik immer den wahrscheinlich nächsten Knoten im Raster, der zum Ziel führt. Jedem Nachbarknoten wird zuerst einen Wert d zugeordnet, der angibt, wie lange der Weg geschätzt von diesem Knoten zum Ziel führt. Der Wert d wird mit der Manhattan-Heuristik ausgerechnet. Jeder Graph mit einem d-Wert wird in eine Liste eingetragen. Der A-Star rechnet immer die neuen Nachbarn des Graphen mit dem kleinsten d-Wert aus. Dadurch kann es vorkommen, das nach langer Suche der A-Star plötzlich wieder einige Graphen zurückspringen muss, da die neu berechneten d-Werte grösser als ein früherer gefundener d-Wert ist.
