Fix broken link on comparison page to intro page.

--- a/views/comparison.pug
+++ b/views/comparison.pug
@@ -7,7 +7,7 @@ block content
         h1= title
         p Pathfinding-Algorithmen werden hier verglichen (Side-by-side).
         p In der 
-          a(href="/introduction") Einführung
+          a(href="/intro") Einführung
           |  haben wir bereits die drei ausgewählten Pathfinder (A*, BestFirst und BreadthFirst) genannt.
           | Diese Pathfinder werden auf dieser Seite parallel und mehrmals hintereinander verglichen.
           | Als Resultat ersichtlich sind dann folgende Eigenschaften:
